# eko

./: Cargo.toml  README.md  alias.sh
archive/clap/: command_case.rs  mod.rs  rustflix.rs
archive/commands/: mod.rs
archive/commands/archive/: transform.rs
archive/commands/archive/case/: case.rs  segmentation.rs  test.rs
archive/commands/archive/structopt/: case.rs  inspect.rs  modify.rs
archive/structopt/: opts_sub.rs
src/: case.rs  lib.1.rs  lib.rs  main.rs  options.rs
src/cli/: builder.rs  derive.rs  mod.rs
src/cli/archive/: args.rs
src/cli/archive/clap/: git_example.rs  opts_main.rs
src/cli/archive/structopt/: mod.rs  opts_main.rs
src/cli/clap/: mod.rs  opts_main.rs
src/cli/commands/case/: lib.rs
src/cli/lib/: builder.rs  clap_build.rs  clap_derive.rs  derive.rs  derive_template.rs  mod.rs
src/cli/structopt/: opts_main.rs  opts_sub.rs
src/commands/archive/case/: casing.rs  conversion.rs  mod.rs
src/commands/case/: case.rs  mod.rs  transform.rs
src/core/: inspect.rs  mod.rs  print.rs  transform.rs
src/functions/: mod.rs
src/functions/case/: mod.rs  readme.md
src/functions/change_case/: mod.rs  recase.rs
src/options/: opts_main.rs  opts_sub.rs
src/process/: mod.rs  transform.rs
src/tests/: cargo_derive.rs  case.rs  git.rs  mod.rs
src/utilities/: info.rs
src/via_clap/: cli.rs
src/via_structopt/: mod.rs
src/via_structopt/options/: opts_main.rs  opts_sub.rs
src/via_structopt/process/: inspect.rs  print.rs
srcx/: lib.rs
srcx/via_structopt/: Cargo.toml
srcx/via_structopt/src/: main.rs
(+18 files in other folders)
