[package]
name = "eko"
version = "0.1.0"
edition = "2021"
description = "Transform or inspect strings"
authors = ["Craole <iamcraole@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/you/grrs"
repository = "https://github.com/you/grrs"
keywords = ["cli", "string", "case", "transform", "inspect"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0.4", features = ["derive"] }
# convert_case = "0.6.0"
# structopt = "0.3.26"
unicode-segmentation = "1.10.0"
